fixes space kebab menu out of view

--- a/res/css/structures/_SpacePanel.scss
+++ b/res/css/structures/_SpacePanel.scss
@@ -154,7 +154,7 @@ $activeBorderColor: $primary-content;
             align-items: center;
             border-radius: 12px;
             padding: 4px;
-            width: calc(100% - 32px);
+            width: 32px;
         }
 
         .mx_SpaceButton_name {
@@ -162,7 +162,7 @@ $activeBorderColor: $primary-content;
             margin-left: 8px;
             white-space: nowrap;
             display: block;
-            text-overflow: ellipsis;
+            text-overflow:ellipsis;
             overflow: hidden;
             font-size: $font-14px;
             line-height: $font-18px;
@@ -327,13 +327,12 @@ $activeBorderColor: $primary-content;
             display: block;
         }
     }
-
     .mx_SpaceItem:not(.mx_SpaceItem_new) {
         .mx_SpaceButton:hover,
         .mx_SpaceButton:focus-within,
         .mx_SpaceButton_hasMenuOpen {
             &:not(.mx_SpaceButton_narrow):not(.mx_SpaceButton_invite) .mx_SpaceButton_name {
-                max-width: calc(100% - 56px);
+                max-width: calc(100% - 88px);
             }
         }
     }
